# arXiv-Summarizer

./: .gitignore  README.md  pyproject.toml  pyproject.txt
local_qdrant/: meta.json
local_qdrant/collection/papers/: storage.sqlite
src/arxiv_summarizer/: __init__.py  main.py
